home and removed service

--- a/templates/front/devis/confirmation.html.twig
+++ b/templates/front/devis/confirmation.html.twig
@@ -11,7 +11,7 @@
             <p class="lead mb-4">consulter votre boîte e-mail, si vous ne voyez pas le message dans la boite de réception, il ce peut qu'il soit dans les spams.</p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
                 <a href="{{ url('app_login') }}" class="btn btn-primary btn-lg px-4 gap-3">Me connecter</a>
-                <a href="{{ url('front_devis_register', {id: user.id }) }}" class="btn btn-outline-secondary btn-lg px-4">Compléter mes informations</a>
+                <a href="{{ url('front_devis_register', {id: user.id }) }}" class="btn btn-secondary btn-lg px-4 gap-3">Compléter mes informations</a>
             </div>
         </div>
     </div>
