--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -59,7 +59,6 @@
 					<p class="lead mb-4 text-muted">Grâce à mon expertise en développement Web, je vous aide à créer un site professionnel
 						et attractif, adapté à tous les appareils. La sécurité des données est une priorité, et je propose
 						des solutions de gestion de contenu faciles à utiliser.</p>
-					<a href="{{ url('front_devis_new') }}" class="btn btn-tertiary mr-3 animate-up-2 ni-mobile-button">Ce que nous faisons<span class="ml-2"><span class="fas fa-arrow-right"></span></span></a>
 				</div>
 				<div class="col-12 col-md-5 d-none d-md-block text-center"><img src="{{ asset('img/support/support1.svg') }}" alt="scriptzenit"></div>
 			</div>
@@ -72,16 +71,26 @@
 	</section>
 	<!-- End of Hero section -->
 
+	<div class="container col-xxl-8 px-4 py-5">
+		<div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+			<div class="col-10 col-sm-8 col-lg-6">
+				<a href="{{ asset('img/demande_devis.jpg') }}"><img src="{{ asset('img/demande_devis.jpg') }}" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy"></a>
+			</div>
+			<div class="col-lg-6">
+				<h1 class="display-5 fw-bold lh-1 mb-3">Des solutions de développement web adaptées à tous les besoins</h1>
+				<p class="lead">Je conçois la solution optimale de développement web pour chaque situation spécifique, qu'il s'agisse de développer une plateforme complète ou de mettre en place des outils précis pour vos besoins uniques.</p>
+				<a href="{{ url('front_devis_new') }}" class="btn btn-tertiary mr-3 animate-up-2 ni-mobile-button">Ce que nous faisons<span class="ml-2"><span class="fas fa-arrow-right"></span></span></a>
+			</div>
+		</div>
+	</div>
+
+
 	<!-- Solutions -->
+
+	{#<h1 class="display-4 fw-bold text-center">Processus</h1>
 
 	<section style="padding: 52px 40px 60px;">
 		<div class="container-fluid">
-			<div class="row justify-content-center">
-				<div class="col-12 col-md-8 text-center">
-					<h2 class="h1 font-weight-bolder">Des solutions de développement web adaptées à tous les besoins</h2>
-					<p class="lead">Je conçois la solution optimale de développement web pour chaque situation spécifique, qu'il s'agisse de développer une plateforme complète ou de mettre en place des outils précis pour vos besoins uniques.</p>
-				</div>
-			</div>
 			<div class="row">
 				<div class="col-12 col-md-6 col-lg-4 mb-5">
 					<div class="card shadow-soft border-light">
@@ -160,7 +169,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section>#}
 
 	<!-- ./ Solutions -->
 
@@ -169,7 +178,7 @@
 		<div class="row">
 			<div class="col-xs-12 col-sm-12">
 				<div class="block-title">
-					<h2>Ce que je fais</h2>
+					<h2>Processus</h2>
 				</div>
 			</div>
 		</div>
