edited css and twig

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1961,7 +1961,7 @@ ul.social-links li:last-child a {
 }
 
 .info-block-w-icon .ci-text p {
-  font-size: .92em;
+  font-size: 18px
 }
 
 .info-block-w-icon .ci-text p:last-child {
