--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -59,11 +59,12 @@
 					<p class="lead mb-4 text-muted">Grâce à mon expertise en développement Web, je vous aide à créer un site professionnel
 						et attractif, adapté à tous les appareils. La sécurité des données est une priorité, et je propose
 						des solutions de gestion de contenu faciles à utiliser.</p>
+					<a href="{{ url('front_devis_new') }}" class="btn btn-tertiary mr-3 animate-up-2 ni-mobile-button">Ce que nous faisons<span class="ml-2"><span class="fas fa-arrow-right"></span></span></a>
 				</div>
 				<div class="col-12 col-md-5 d-none d-md-block text-center"><img src="{{ asset('img/support/support1.svg') }}" alt="scriptzenit"></div>
 			</div>
 		</div>
-		<div class="position-absolute bottom-0 left-0 w-100 d-none d-md-block mb-n2">
+		<div class="position-absolute bottom-0 left-0 w-100 mb-n2">
 			<svg class="fill-white" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1920 43.4" style="enable-background:new 0 0 1920 43.4;" xml:space="preserve">
                   <path d="M0,23.3c0,0,405.1-43.5,697.6,0c316.5,1.5,108.9-2.6,480.4-14.1c0,0,139-12.2,458.7,14.3 c0,0,67.8,19.2,283.3-22.7v35.1H0V23.3z"></path>
                </svg>
@@ -71,17 +72,12 @@
 	</section>
 	<!-- End of Hero section -->
 
-	<div class="container col-xxl-8 px-4 py-5">
-		<div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-			<div class="col-10 col-sm-8 col-lg-6">
-				<a href="{{ asset('img/demande_devis.jpg') }}"><img src="{{ asset('img/demande_devis.jpg') }}" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy"></a>
-			</div>
-			<div class="col-lg-6">
-				<h1 class="display-5 fw-bold lh-1 mb-3">Des solutions de développement web adaptées à tous les besoins</h1>
-				<p class="lead">Je conçois la solution optimale de développement web pour chaque situation spécifique, qu'il s'agisse de développer une plateforme complète ou de mettre en place des outils précis pour vos besoins uniques.</p>
-				<a href="{{ url('front_devis_new') }}" class="btn btn-tertiary mr-3 animate-up-2 ni-mobile-button">Ce que nous faisons<span class="ml-2"><span class="fas fa-arrow-right"></span></span></a>
-			</div>
-		</div>
+	<div class="container mt-5">
+		<h1 class="display-5 fw-bold lh-1 mb-3 text-center">Des solutions de développement web adaptées à tous les besoins</h1>
+		<p class="lead mb-4 text-muted text-center">Je conçois la solution optimale de développement web pour chaque situation spécifique, qu'il s'agisse de développer une plateforme complète ou de mettre en place des outils précis pour vos besoins uniques.</p>
+{#
+		<a href="{{ url('front_devis_new') }}" class="btn btn-tertiary mr-3 animate-up-2 ni-mobile-button">Ce que nous faisons<span class="ml-2"><span class="fas fa-arrow-right"></span></span></a>
+#}
 	</div>
 
 
@@ -174,7 +170,7 @@
 	<!-- ./ Solutions -->
 
 	<!-- Services -->
-	<div class="container-fluid p-5" >
+	<div class="container p-5" >
 		<div class="row">
 			<div class="col-xs-12 col-sm-12">
 				<div class="block-title">
@@ -193,7 +189,7 @@
 
 						<div class="ci-text">
 							<h4>BRAINSTORM & ERGONOMIE</h4>
-							<p>Le brainstorming est une méthode de créativité très utile en développement logiciel. Cependant, pour que cette méthode soit efficace, il est important de prendre en compte l'ergonomie, c'est-à-dire la manière dont les utilisateurs interagissent avec l'interface. Lors de la phase de brainstorming, il est important de veiller à ce que l'ergonomie de l'interface ne soit pas un obstacle à la créativité des participants.
+							<p class="lead mb-4 text-muted">Le brainstorming est une méthode de créativité très utile en développement logiciel. Cependant, pour que cette méthode soit efficace, il est important de prendre en compte l'ergonomie, c'est-à-dire la manière dont les utilisateurs interagissent avec l'interface. Lors de la phase de brainstorming, il est important de veiller à ce que l'ergonomie de l'interface ne soit pas un obstacle à la créativité des participants.
 							</p>
 						</div>
 					</div>
@@ -205,7 +201,7 @@
 
 						<div class="ci-text">
 							<h4>CRÉATION & WEBDESIGN</h4>
-							<p>Des idées, c’est bien. Les mettre en en pratique, c’est encore mieux ! Le webdesign de votre
+							<p class="lead mb-4 text-muted">Des idées, c’est bien. Les mettre en en pratique, c’est encore mieux ! Le webdesign de votre
 								futur site internet est construit sous forme de maquettes (charte graphique) qui vous
 								permettront de cadrer graphiquement et de vous projeter sur votre outil.</p>
 						</div>
@@ -218,7 +214,7 @@
 
 						<div class="ci-text">
 							<h4>SUIVI / STATISTIQUES</h4>
-							<p>Un interlocuteur dédié, je vous assure que ça rassure. Des données chiffrées, ça rassure aussi ! Je vous paramètre tout ça, et ça tombe dans votre boite mail, c’est beau la
+							<p class="lead mb-4 text-muted">Un interlocuteur dédié, je vous assure que ça rassure. Des données chiffrées, ça rassure aussi ! Je vous paramètre tout ça, et ça tombe dans votre boite mail, c’est beau la
 								technologie vous ne trouvez pas ?</p>
 						</div>
 					</div>
@@ -235,7 +231,7 @@
 
 						<div class="ci-text">
 							<h4>INTÉGRATION & DÉVELOPPEMENT</h4>
-							<p>Là on va commencer à entrer dans le vif du sujet : la transformation des visuels en code
+							<p class="lead mb-4 text-muted">Là on va commencer à entrer dans le vif du sujet : la transformation des visuels en code
 								HTML, CSS et PHP ! C’est à ce moment que j'aborde le coté techniques et je vous
 								créererai le code de votre nouveau site internet, c’est tout ce qu’il faut retenir !</p>
 						</div>
@@ -248,7 +244,7 @@
 
 						<div class="ci-text">
 							<h4>CONTENUS & CONVERSION</h4>
-							<p>Les contenus de qualité et la conversion sont des éléments clés pour réussir en ligne. Lorsque votre site web manque de contenu pertinent, il peut être difficile d'atteindre vos objectifs. Mais ne vous inquiétez pas, vous n'êtes pas seul dans cette entreprise. Je suis là pour vous aider à créer un contenu engageant qui captivera votre audience et favorisera la conversion.</p>
+							<p class="lead mb-4 text-muted">Les contenus de qualité et la conversion sont des éléments clés pour réussir en ligne. Lorsque votre site web manque de contenu pertinent, il peut être difficile d'atteindre vos objectifs. Mais ne vous inquiétez pas, vous n'êtes pas seul dans cette entreprise. Je suis là pour vous aider à créer un contenu engageant qui captivera votre audience et favorisera la conversion.</p>
 						</div>
 					</div>
 
@@ -259,7 +255,7 @@
 
 						<div class="ci-text">
 							<h4>RÉFÉRENCEMENT NATUREL</h4>
-							<p>Cerise sur le gâteau ? Non pas tant que ça en fait. Un beau site tout neuf, ce serait dommage
+							<p class="lead mb-4 text-muted">Cerise sur le gâteau ? Non pas tant que ça en fait. Un beau site tout neuf, ce serait dommage
 								qu’il ne soit pas référencé sur Google , vous ne trouvez pas ? Une stratégie SEO (aussi
 								appelé référencement naturel), simple et efficace ne mange pas de pain !</p>
 						</div>
@@ -270,7 +266,7 @@
 	</div>
 
 	<!-- Technologie et outils -->
-	<div class="container-fluid p-5" >
+	<div class="container p-5" >
 		<div class="row">
 			<div class="col-xs-12 col-sm-12">
 				<div class="block-title">
@@ -365,7 +361,7 @@
 
 
 	<!-- Pricing -->
-	<div class="container-fluid p-5">
+	<div class="container p-5">
 		<div class="row">
 			<div class=" col-xs-12 col-sm-12 ">
 				<div class="block-title">
