edited home and scss and app.css

--- a/assets/styles/pixel.scss
+++ b/assets/styles/pixel.scss
@@ -25476,7 +25476,7 @@ button.section-gray-800:focus {
 
     .section-header {
         position: relative;
-        padding-top: 7rem;
+        /*padding-top: 7rem;*/
     }
 }
 
