--- a/public/css/front/css/app.css
+++ b/public/css/front/css/app.css
@@ -64,12 +64,15 @@
         font-size: 14px;      /* Taille du texte */
         text-align: center;   /* Centre le texte */
     }
-    .intro{
+    /*.intro{
         padding-top: 100px;
-    }
+    }*/
     .section-header.section-sm {
         padding-top: 4rem;
         padding-bottom: 3rem;
+    }
+    .button_home a{
+        margin-top: 10px;
     }
 }
 
