--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -136,7 +136,8 @@
 	<!-- ./ Solutions -->
 
 	<!-- Services -->
-	<div class="container p-5" >
+	{# Services de l'Agence #}
+	<div class="container p-5">
 		<div class="row">
 			<div class="col-xs-12 col-sm-12">
 				<div class="block-title">
@@ -155,8 +156,7 @@
 
 						<div class="ci-text">
 							<h4>BRAINSTORM & ERGONOMIE</h4>
-							<p class="lead mb-4 text-muted">Le brainstorming est une méthode de créativité très utile en développement logiciel. Cependant, pour que cette méthode soit efficace, il est important de prendre en compte l'ergonomie, c'est-à-dire la manière dont les utilisateurs interagissent avec l'interface. Lors de la phase de brainstorming, il est important de veiller à ce que l'ergonomie de l'interface ne soit pas un obstacle à la créativité des participants.
-							</p>
+							<p class="lead mb-4 text-muted">Le brainstorming est une méthode de créativité très utile en développement logiciel. Cependant, pour que cette méthode soit efficace, il est important de prendre en compte l'ergonomie, c'est-à-dire la manière dont les utilisateurs interagissent avec l'interface. Lors de la phase de brainstorming, il est important de veiller à ce que l'ergonomie de l'interface ne soit pas un obstacle à la créativité des participants.</p>
 						</div>
 					</div>
 
@@ -167,9 +167,7 @@
 
 						<div class="ci-text">
 							<h4>CRÉATION & WEBDESIGN</h4>
-							<p class="lead mb-4 text-muted">Des idées, c’est bien. Les mettre en en pratique, c’est encore mieux ! Le webdesign de votre
-								futur site internet est construit sous forme de maquettes (charte graphique) qui vous
-								permettront de cadrer graphiquement et de vous projeter sur votre outil.</p>
+							<p class="lead mb-4 text-muted">Des idées, c’est bien. Les mettre en pratique, c’est encore mieux ! Le webdesign de votre futur site internet est construit sous forme de maquettes (charte graphique) qui vous permettront de cadrer graphiquement et de vous projeter sur votre outil.</p>
 						</div>
 					</div>
 
@@ -180,8 +178,7 @@
 
 						<div class="ci-text">
 							<h4>SUIVI / STATISTIQUES</h4>
-							<p class="lead mb-4 text-muted">Un interlocuteur dédié, je vous assure que ça rassure. Des données chiffrées, ça rassure aussi ! Je vous paramètre tout ça, et ça tombe dans votre boite mail, c’est beau la
-								technologie vous ne trouvez pas ?</p>
+							<p class="lead mb-4 text-muted">Un interlocuteur dédié, nous vous assurons que ça rassure. Des données chiffrées, ça rassure aussi ! Nous paramétrons tout ça, et ça tombe dans votre boite mail, c’est beau la technologie, n'est-ce pas ?</p>
 						</div>
 					</div>
 				</div>
@@ -189,7 +186,6 @@
 
 			<div class="col-xs-12 col-sm-6">
 				<div class="info-list-w-icon">
-
 					<div class="info-block-w-icon">
 						<div class="ci-icon">
 							<i class="linecons linecons-shop"></i>
@@ -197,9 +193,7 @@
 
 						<div class="ci-text">
 							<h4>INTÉGRATION & DÉVELOPPEMENT</h4>
-							<p class="lead mb-4 text-muted">Là on va commencer à entrer dans le vif du sujet : la transformation des visuels en code
-								HTML, CSS et PHP ! C’est à ce moment que j'aborde le coté techniques et je vous
-								créererai le code de votre nouveau site internet, c’est tout ce qu’il faut retenir !</p>
+							<p class="lead mb-4 text-muted">Là on va commencer à entrer dans le vif du sujet : la transformation des visuels en code HTML, CSS et PHP ! C’est à ce moment que nous abordons le côté technique et que nous créons le code de votre nouveau site internet, c’est tout ce qu’il faut retenir !</p>
 						</div>
 					</div>
 
@@ -210,7 +204,7 @@
 
 						<div class="ci-text">
 							<h4>CONTENUS & CONVERSION</h4>
-							<p class="lead mb-4 text-muted">Les contenus de qualité et la conversion sont des éléments clés pour réussir en ligne. Lorsque votre site web manque de contenu pertinent, il peut être difficile d'atteindre vos objectifs. Mais ne vous inquiétez pas, vous n'êtes pas seul dans cette entreprise. Je suis là pour vous aider à créer un contenu engageant qui captivera votre audience et favorisera la conversion.</p>
+							<p class="lead mb-4 text-muted">Les contenus de qualité et la conversion sont des éléments clés pour réussir en ligne. Lorsque votre site web manque de contenu pertinent, il peut être difficile d'atteindre vos objectifs. Mais ne vous inquiétez pas, vous n'êtes pas seuls dans cette entreprise. Nous sommes là pour vous aider à créer un contenu engageant qui captivera votre audience et favorisera la conversion.</p>
 						</div>
 					</div>
 
@@ -221,15 +215,14 @@
 
 						<div class="ci-text">
 							<h4>RÉFÉRENCEMENT NATUREL</h4>
-							<p class="lead mb-4 text-muted">Cerise sur le gâteau ? Non pas tant que ça en fait. Un beau site tout neuf, ce serait dommage
-								qu’il ne soit pas référencé sur Google , vous ne trouvez pas ? Une stratégie SEO (aussi
-								appelé référencement naturel), simple et efficace ne mange pas de pain !</p>
+							<p class="lead mb-4 text-muted">Cerise sur le gâteau ? Non pas tant que ça en fait. Un beau site tout neuf, ce serait dommage qu’il ne soit pas référencé sur Google, vous ne trouvez pas ? Une stratégie SEO (aussi appelée référencement naturel), simple et efficace, ne mange pas de pain !</p>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+
 
 	<!-- Technologie et outils -->
 	<div class="container p-5" >
