edited container for some page

--- a/templates/front/projets/index.html.twig
+++ b/templates/front/projets/index.html.twig
@@ -54,7 +54,7 @@
 								<div class="card-body">
 									<h5 class="card-title">Réalisation de site d'annonce immobilière</h5>
 									<p class="card-text">Une réalisation sur mesure pour votre site d'annonce immobilière ou de voyage, afin de garantir une présence permanente en ligne..</p>
-									<a href="{{ url('front_devis_new', {'type': 'site_reale_state'}) }}" class="btn btn-primary">Je crée mon devis</a>
+									<a href="{{ url('front_devis_new', {'type': 'site_real_estate'}) }}" class="btn btn-primary">Je crée mon devis</a>
 								</div>
 							</div>
 						</div>
