--- a/templates/front/devis/set_password.html.twig
+++ b/templates/front/devis/set_password.html.twig
@@ -3,12 +3,13 @@
 {% block title %}Définir un mot de passe{% endblock %}
 
 {% block content %}
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 offset-md-3">
-                <h1>Définissez votre mot de passe</h1>
-                <p>Veuillez définir un mot de passe pour le suivi de votre demande de devis.</p>
-
+    <div class="container col-xl-10 col-xxl-8 px-4 py-5">
+        <div class="row align-items-center g-lg-5 py-5">
+            <div class="col-lg-6 col-md-6 text-center">
+                <h1 class="display-4 fw-bold lh-1 text-body-emphasis mb-3">Définissez votre mot de passe</h1>
+                <p class="col-lg-10 fs-4">Veuillez définir un mot de passe pour le suivi de votre demande de devis.</p>
+            </div>
+            <div class="col-md-6 mx-auto col-lg-5">
                 {{ form_start(form) }}
                 <div class="mb-3">
                     {{ form_label(form.password, 'Mot de passe') }}
