--- a/templates/front/projets/index.html.twig
+++ b/templates/front/projets/index.html.twig
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-	<div id="main" class="site-main">
+	<div id="main" class="site-main container">
 		<div id="main-content" class="single-page-content">
 			<div id="primary" class="content-area">
 
