--- a/templates/front/projets/show.html.twig
+++ b/templates/front/projets/show.html.twig
@@ -7,7 +7,7 @@
 {% block content %}
 
 
-	<div id="ajax-page" class="ajax-page-content">
+	<div id="ajax-page" class="ajax-page-content container">
 		<div class="ajax-page-wrapper">
 			<div class="ajax-page-nav">
 				<div class="nav-item">
