added google analytics id

--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -228,7 +228,7 @@
 		</ul>
 		</div>
 	</section>
-			<!-- Technologie et outils -->
+	<!-- Technologie et outils -->
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12 col-sm-12">
@@ -324,7 +324,7 @@
 
 
 	<!-- Pricing -->
-	<div class="container p-5">
+	<div class="container">
 		<div class="row">
 			<div class=" col-xs-12 col-sm-12 ">
 				<div class="block-title">
