--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -195,6 +195,17 @@
 					document.addEventListener('scroll', displayFixed)
 				})()
 			</script>
+
+
+			<!-- Google tag (gtag.js) -->
+			<script async src="https://www.googletagmanager.com/gtag/js?id=G-19D64W6342"></script>
+			<script>
+				window.dataLayer = window.dataLayer || [];
+				function gtag(){dataLayer.push(arguments);}
+				gtag('js', new Date());
+
+				gtag('config', 'G-19D64W6342');
+			</script>
 		{% endblock %}
 
 	</body>
